--- a/TwinCatOhje.org
+++ b/TwinCatOhje.org
@@ -32,6 +32,11 @@ esimerkiksi pysty asettamaan Run-moodiin, jos samaan aikaan PC:llä on käynniss
 ** Core isolation
 TwinCat projekti voidaan ajaa eristettynä yhdellä prosessorin ytimellä Core
 Isolation ominaisuuden avulla. Core Isolation löytyy projektin SYSTEM osion alta.
+** BIOS asetukset
+Hyper-Threading pois päältä
+*** Hyper-Threading *pois päältä*
+*** Intel Virtualization Technology Extensions (VT-x) *päälle*
+
 * Ensimmäinen PLC projekti
 ** Uusi projekti
 Uusi PLC projekti aloitetaan valitsemalla Visual Studio File valikosta New
@@ -70,14 +75,6 @@ Projektin puunäkymään PLC-kohdan alle ilmestyy luotu projekti tiedostoineen.
 - POU
   Ohjelmat joita PLCllä ajetaan.
 - VISUs
-*** Ohjelmointi
-TwinCat 3 tukee kaikkia IEC 61131-3 standardin mukaisia ohjelmointimenetelmiä,
-eli LD (Ladder diagram), FBD (Function Block Diagram), ST (Structured Text), IL
-(Instruction List) ja SFC (Sequanteial Function Chart). Tässä ohjeessa käydään
-läpi lyhyesti LD, FBD ja ST ohjelmointimenetelmien käyttö TwinCat 3:ssa.
-**** Ladder diagram -ohjelmointi
-**** Fuction Block Diagram -ohjelmointi
-**** Structured Text -ohjelmointi
 ** Globaalit muuttujat
 Globaalien muuttujien avulla tulot ja lähdöt saadaan helposti liitettyä
 ohjelmissa käytettäviin muuttujiin. Muuttujien määrittely onnistuu lisäämällä
@@ -89,27 +86,56 @@ dialogin avulla. Teksti- ja taulukkopohjainen määrittely tehdään
 muuttujatiedoston muokkauksessa.
 
 Tekstipohjainen muuttujien määrittely tapahtuu formaatissa:
+#+BEGIN_SRC
     /muuttujanNimi/ : /tyyppi/;
+#+END_SRC
 Esim.
+#+BEGIN_SRC
     muuttuja1 : BOOL;
-
+#+END_SRC
 Muuttujaan voidaan määrittää myös rekisteriosoite, joka voidaan myöhemmin mapata johonkin
-fyysiseen tuloon tai lähtöön.
+fyysiseen tuloon tai lähtöön. Määrittäminen tapahtuu lisäämällä muuttujan nimen
+perään AT ja halutun rekisterin tyyppi ja osoite %-merkin jälkeen. Rekisterin
+tyyppi ja osoite erotetaan X-kirjaimella.
+Esim. input rekisteri 0.0
+
+#+BEGIN_SRC
     /muuttujanNimi/ AT %IX0.0 : /tyyppi/;
+#+END_SRC
+Asettamalla osoitteen tilalle tähti (*), mapataan osoite automaattisesti.
 
-Asettamalla osoitteen tilalle tähti (\*), mapataan osoite automaattisesti.
-    /muuttujanNimi/ AT %I\* : /tyyppi/;
-
-Muutujat voidaan linkittää johonkin lähtöön tai tuloon I/O valikon alta, kun
+#+BEGIN_SRC
+    /muuttujanNimi/ AT %I* : /tyyppi/;
+#+END_SRC
+Muuttujat voidaan linkittää johonkin lähtöön tai tuloon I/O valikon alta, kun
 laitteet on lisätty.
-** Projektin simuloiminen TwinCat runtimella
+Output rekisterit määritetään korvaamall I-kirjain Q:lla.
 
+#+BEGIN_SRC
+    /muuttujanNimi/ AT %QX0.0 : /tyyppi/;
+#+END_SRC
+
+* Ohjelmointi
+TwinCat 3 tukee kaikkia IEC 61131-3 standardin mukaisia ohjelmointimenetelmiä,
+eli LD (Ladder diagram), FBD (Function Block Diagram), ST (Structured Text), IL
+(Instruction List) ja SFC (Sequanteial Function Chart). Tässä ohjeessa käydään
+läpi lyhyesti LD, FBD ja ST ohjelmointimenetelmien käyttö TwinCat 3:ssa.
+** PLC ohjelman lisäys
+** Muuttujien määrittäminen
+** Ladder diagram -ohjelmointi
+** Fuction Block Diagram -ohjelmointi
+** Structured Text -ohjelmointi
+
+* Simulointi
+** Projektin simuloiminen TwinCat runtimella
 - Aktivoi konfiguraatio
 ** Ohjelman debuggaus ajon aikana
 - PLC ohjelmaa ja muuttujien arvoja voidaan tarkastella ja muuttaa ajon aikana.
-** I/O mäppäys
-*** EtherCat laitteiden lisääminen
-*** Terminaalimoduulien lisääminen
+
+* I/O mäppäys laitteisiin
+** EtherCat laitteiden lisääminen
+** Terminaalimoduulien lisääminen
+
 * HMI käyttöliittymä
 ** Eri toteutustavat
 ** Web toteutuksen vaiheet
@@ -122,6 +148,10 @@ laitteet on lisätty.
 | Häh | Jotain        | Ehkä  |
 |     |               |       |
 |     |               |       |
+|     |               |       |
+
+* Ongelmatilanteet
+
 
 * Lähteet
 ** https://download.beckhoff.com/download/document/catalog/TwinCAT_3_Booklet.pdf
